x overflow fix

--- a/Style.css
+++ b/Style.css
@@ -3,10 +3,13 @@ body
 	background-color: #FFD812;
 	font-family: "Oxygen", sans-serif;
 	margin: 0em;
+	max-width: 100%;
+	overflow-x: hidden;
 }
 
 #center
 {
+	
 	position: relative;
 	width: 100%;
 }
@@ -74,7 +77,7 @@ footer
 	background-color: #000000;
 	min-width: 100%;
 	color:  #FFD812;
-	position: absolute;
+	position:fixed;
 }
 
 #sidebar 
